// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageTitle renders with tags 1`] = `
<div
  class="gl-display-flex gl-flex-direction-column"
  data-qa-selector="package_title"
>
  <div
    class="gl-display-flex gl-justify-content-space-between gl-py-3"
  >
    <div
      class="gl-flex-direction-column gl-flex-grow-1"
    >
      <div
        class="gl-display-flex"
      >
        <!---->
         
        <div
          class="gl-display-flex gl-flex-direction-column"
        >
          <h2
            class="gl-font-size-h1 gl-mt-3 gl-mb-0"
            data-testid="title"
          >
            @gitlab-org/package-15
          </h2>
           
          <div
            class="gl-display-flex gl-align-items-center gl-text-gray-500 gl-mt-3"
          >
            <div
              class="gl-display-flex gl-gap-3"
              data-testid="sub-header"
            >
              v
          1.0.0
         published 
              <time-ago-tooltip-stub
                cssclass=""
                datetimeformat="DATE_WITH_TIME_FORMAT"
                time="2020-08-17T14:23:32Z"
                tooltipplacement="top"
              />
               
              <package-tags-stub
                hidelabel="true"
                tagdisplaylimit="2"
                tags="[object Object],[object Object],[object Object]"
              />
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="gl-display-flex gl-flex-wrap gl-align-items-center gl-mt-3"
      >
        <div
          class="gl-display-flex gl-align-items-center gl-mr-5"
        >
          <metadata-item-stub
            data-testid="package-type"
            icon="package"
            link=""
            size="s"
            text="npm"
            texttooltip=""
          />
        </div>
        <div
          class="gl-display-flex gl-align-items-center gl-mr-5"
        >
          <metadata-item-stub
            data-testid="package-size"
            icon="disk"
            link=""
            size="s"
            text="800.00 KiB"
            texttooltip=""
          />
        </div>
        <div
          class="gl-display-flex gl-align-items-center gl-mr-5"
        >
          <metadata-item-stub
            data-testid="package-last-downloaded-at"
            icon="download"
            link=""
            size="m"
            text="Last downloaded Aug 17, 2021"
            texttooltip=""
          />
        </div>
      </div>
    </div>
     
    <!---->
  </div>
   
  <p />
</div>
`;

exports[`PackageTitle renders without tags 1`] = `
<div
  class="gl-display-flex gl-flex-direction-column"
  data-qa-selector="package_title"
>
  <div
    class="gl-display-flex gl-justify-content-space-between gl-py-3"
  >
    <div
      class="gl-flex-direction-column gl-flex-grow-1"
    >
      <div
        class="gl-display-flex"
      >
        <!---->
         
        <div
          class="gl-display-flex gl-flex-direction-column"
        >
          <h2
            class="gl-font-size-h1 gl-mt-3 gl-mb-0"
            data-testid="title"
          >
            @gitlab-org/package-15
          </h2>
           
          <div
            class="gl-display-flex gl-align-items-center gl-text-gray-500 gl-mt-3"
          >
            <div
              class="gl-display-flex gl-gap-3"
              data-testid="sub-header"
            >
              v
          1.0.0
         published 
              <time-ago-tooltip-stub
                cssclass=""
                datetimeformat="DATE_WITH_TIME_FORMAT"
                time="2020-08-17T14:23:32Z"
                tooltipplacement="top"
              />
               
              <!---->
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="gl-display-flex gl-flex-wrap gl-align-items-center gl-mt-3"
      >
        <div
          class="gl-display-flex gl-align-items-center gl-mr-5"
        >
          <metadata-item-stub
            data-testid="package-type"
            icon="package"
            link=""
            size="s"
            text="npm"
            texttooltip=""
          />
        </div>
        <div
          class="gl-display-flex gl-align-items-center gl-mr-5"
        >
          <metadata-item-stub
            data-testid="package-size"
            icon="disk"
            link=""
            size="s"
            text="800.00 KiB"
            texttooltip=""
          />
        </div>
        <div
          class="gl-display-flex gl-align-items-center gl-mr-5"
        >
          <metadata-item-stub
            data-testid="package-last-downloaded-at"
            icon="download"
            link=""
            size="m"
            text="Last downloaded Aug 17, 2021"
            texttooltip=""
          />
        </div>
      </div>
    </div>
     
    <!---->
  </div>
   
  <p />
</div>
`;
